--- a/app/src/main/res/layout/admin_layout.xml
+++ b/app/src/main/res/layout/admin_layout.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="50dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="欢迎使用Zcc、"
+        android:text="欢迎使用"
         android:textSize="25sp" />
 
     <TextView
