--- a/app/src/main/res/layout/student_item.xml
+++ b/app/src/main/res/layout/student_item.xml
@@ -2,21 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
-    <!--listView的布局-->
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/student_image"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
-
+        android:orientation="horizontal">
+    <!--listView的布局-->
     <TextView
         android:id="@+id/student_name"
         android:layout_width="wrap_content"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="50dp"
         android:textSize="20sp" />
 
     <TextView
@@ -24,9 +22,14 @@
         android:layout_weight="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
         android:textSize="20sp" />
 
+    <ImageView
+        android:id="@+id/student_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
 
 
+    </LinearLayout>
 </LinearLayout>
