--- a/app/src/main/res/layout/studentinfo_activity_layout.xml
+++ b/app/src/main/res/layout/studentinfo_activity_layout.xml
@@ -23,6 +23,12 @@
             android:text=" 学号 "
             android:textSize="20sp" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:text=" 性别 "
+            android:textSize="20sp" />
 
     </LinearLayout>
 
