--- a/app/src/main/res/layout/add_student_health.xml
+++ b/app/src/main/res/layout/add_student_health.xml
@@ -170,10 +170,10 @@
         android:id="@+id/add_student_health_sure"
         style="@style/common_button_style"
         android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="120dp"
         android:layout_marginLeft="15dp"
         android:gravity="center"
         android:text="确定" />
