--- a/app/src/main/res/layout/add_student_info_layout.xml
+++ b/app/src/main/res/layout/add_student_info_layout.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="120dp"
         android:text="姓        名："
         android:textSize="20sp" />
 
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="30dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="110dp"
         android:layout_toRightOf="@+id/name" />
 
     <TextView
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/add_student_layout_name"
         android:layout_marginRight="30dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="5dp"
         android:layout_toRightOf="@+id/name" />
 
     <TextView
@@ -59,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/add_student_layout_sex"
         android:layout_marginRight="30dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="5dp"
         android:layout_toRightOf="@+id/name"
   />
 
@@ -67,10 +67,10 @@
         android:id="@+id/add_student_layout_sure"
         style="@style/common_button_style"
         android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="120dp"
         android:layout_marginLeft="15dp"
         android:gravity="center"
         android:text="确定" />
