--- a/app/src/main/res/layout/add_student_health.xml
+++ b/app/src/main/res/layout/add_student_health.xml
@@ -7,7 +7,7 @@
     android:paddingRight="10dp"
     android:paddingTop="10dp">
 
-    <!-- 标题 -->
+    <!-- 搜索框 -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
