--- a/app/src/main/res/layout/add_student_health.xml
+++ b/app/src/main/res/layout/add_student_health.xml
@@ -89,6 +89,10 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="30dp"
         android:layout_marginTop="70dp"
+        android:textColor="#317F6D"
+        android:textColorHint="#317F6D"
+        android:hint="请通过搜索框选择姓名"
+        android:focusable="false"
         android:layout_toRightOf="@+id/name" />
 
     <TextView
@@ -108,6 +112,9 @@
         android:layout_below="@+id/add_student_health_name"
         android:layout_marginRight="30dp"
         android:layout_marginTop="7dp"
+        android:textColor="#317F6D"
+        android:textColorHint="#317F6D"
+        android:focusable="false"
         android:layout_toRightOf="@+id/sex" />
 
     <TextView
@@ -127,6 +134,9 @@
         android:layout_below="@+id/add_student_health_sex"
         android:layout_marginRight="30dp"
         android:layout_marginTop="6dp"
+        android:textColor="#317F6D"
+        android:textColorHint="#317F6D"
+        android:focusable="false"
         android:layout_toRightOf="@+id/id" />
 
     <TextView
